package com.directi.training.ocp.exercise;

public class TimeSlotResource implements Resource {
    @Override
    public Bool isFree() {
        // Returns State
    }

    @Override
    public Bool MarkBusy(int resourceId) {
        // Implementation
    }

    @Override
    public Bool MarkFree(int resourceId) {
        // Implementation
    }
}